fix spacing between sections

--- a/css/styles.css
+++ b/css/styles.css
@@ -891,6 +891,10 @@ p {
 }
 
 @media screen and (max-width: 370px){
+    .hero {
+        height: 1200px;
+        margin-bottom: 40px;
+    }
     .review {
         flex-direction: column;
         height: 520px;
@@ -912,10 +916,6 @@ p {
 }
 
 @media screen and (max-width: 330px){
-    .hero {
-        height: 1200px;
-        margin-bottom: 30px;
-    }
     .review {
         flex-direction: column;
         height: 540px;
